[project]
name = "apple-music-dj"
version = "3.1.0"
description = "OpenClaw skill — personalized Apple Music curation engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Andernet (Matthew Anderson)", email = "and3rn3t@icloud.com"},
]
keywords = ["apple-music", "musickit", "playlists", "personalization", "openclaw"]

[project.optional-dependencies]
token = ["PyJWT>=2.8.0,<3.0", "cryptography>=41.0,<44.0"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-v --tb=short"
